--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.17",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
