--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.9.2",
     "ipfs-http-client": "^60.0.1",
     "react-hot-toast": "^2.5.2",
     "react-slick": "^0.30.3",
