--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
+    "formik": "^2.4.6",
     "framer-motion": "^12.6.5",
     "idb": "^8.0.2",
     "lucide-react": "^0.488.0",
@@ -27,7 +28,8 @@
     "styled-components": "^6.1.17",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
