--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@tabler/icons-react": "^3.31.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
-    "framer-motion": "^12.6.5",
+    "framer-motion": "^12.10.4",
+    "gsap": "^3.13.0",
+    "howler": "^2.2.4",
     "idb": "^8.0.2",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.488.0",
     "motion": "^12.6.5",
     "react": "^19.0.0",
