--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@chakra-ui/react": "^3.16.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@openzeppelin/contracts": "^5.2.0",
+    "@openzeppelin/contracts": "^5.3.0",
+    "@openzeppelin/contracts-upgradeable": "^5.3.0",
     "dotenv": "^16.5.0",
-    "framer-motion": "^12.9.2", 
+    "framer-motion": "^12.9.2",
     "glob": "^11.0.2",
     "ipfs-http-client": "^60.0.1",
     "lodash": "^4.17.21",
@@ -31,6 +32,7 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "chai": "^4.3.10",
     "ethers": "^6.11.1",
-    "hardhat": "^2.23.0"
+    "hardhat": "^2.23.0",
+    "hardhat-contract-sizer": "^2.10.0"
   }
 }
