--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "glob": "^11.0.2",
     "ipfs-http-client": "^60.0.1",
     "lodash": "^4.17.21",
+    "qrcode.react": "^4.2.0",
     "react-hot-toast": "^2.5.2",
     "react-slick": "^0.30.3",
     "react-virtualized-auto-sizer": "^1.0.26",
